@@ -3,6 +3,7 @@ package Data::HTML::Element::Button;
 use strict;
 use warnings;
 
+use Data::HTML::Element::Utils qw(check_data check_data_type);
 use Error::Pure qw(err);
 use List::Util 1.33 qw(none);
 use Mo qw(build default is);
@@ -95,31 +96,10 @@ sub BUILD {
 	check_css_class($self, 'css_class');
 
 	# Check data type.
-	if (! defined $self->{'data_type'}) {
-		$self->{'data_type'} = 'plain';
-	}
-	if (none { $self->{'data_type'} eq $_ } @DATA_TYPES) {
-		err "Parameter 'data_type' has bad value.";
-	}
+	check_data_type($self);
 
 	# Check data based on type.
-	check_array($self, 'data');
-	foreach my $data_item (@{$self->{'data'}}) {
-		# Plain mode
-		if ($self->{'data_type'} eq 'plain') {
-			if (ref $data_item ne '') {
-				err "Parameter 'data' in 'plain' mode must contain ".
-					'reference to array with scalars.';
-			}
-		# Tags mode.
-		} else {
-			if (ref $data_item ne 'ARRAY') {
-				err "Parameter 'data' in 'tags' mode must contain ".
-					"reference to array with references ".
-					'to array with Tags structure.';
-			}
-		}
-	}
+	check_data($self);
 
 	# Check disabled.
 	if (! defined $self->{'disabled'}) {
@@ -549,6 +529,7 @@ Returns string.
 
 =head1 DEPENDENCIES
 
+L<Data::HTML::Element::Utils>,
 L<Error::Pure>,
 L<List::Util>,
 L<Mo>,
