@@ -16,7 +16,6 @@ https://www.w3schools.com/tags/tag_textarea.asp
 23. Textarea: Add maxlength
 24. Textarea. Add wrap
 26. Select: 'options' parameter rewrite to 'data' like in Button.
-27. Move code to check 'data' and 'data_type' to some common code.
 28. Form: Add data and data_type params.
 29.
 
@@ -50,4 +49,7 @@ OK [20240107] skim
 OK [20240116] skim
 
 21. Input: Doc for Input.
+OK [20240116] skim
+
+27. Move code to check 'data' and 'data_type' to some common code.
 OK [20240116] skim
