@@ -1,5 +1,6 @@
 0.10
  - Add DESCRIPTION section to Element doc.
+ - Add Utils with data and data_type checks.
  - Add check for CSS class in Input, Option and Select.
  - Add check for data in Option.
  - Add default value for boolean values in Input.
